[package]
name = "repocat"
version = "0.1.5"
edition = "2021"
description = "A tool to concatenate all code and text files in a github repo for LLM inference contexts"
repository = "https://github.com/SamKG/repocat"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.14", features = ["derive"] }
ignore = "0.4.22"
itertools = "0.13.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
glob = "0.3.1"
tempfile = { version = "3.12.0"}

git2 = { version = "0.19.0", optional = true, features=["vendored-libgit2", "vendored-openssl"] }

[features]
git = ["git2"]
